@@ -26,6 +26,13 @@
 #import <AppKit/AppKit.h>
 #import "GRObjectControlPoint.h"
 
+enum
+{
+  GRPointMiddle = 0,
+  GRPointStart = 1,
+  GRPointEnd = 2
+}; typedef NSUInteger GRPointPosition;
+
 typedef struct
 {
     NSPoint firstHandle;
@@ -43,6 +50,7 @@ typedef struct
   GRBezierPath *path;
   GRBezierHandle bzHandle;
   BOOL symmetricalHandles;
+  GRPointPosition pointPosition;
 }
 
 - (id)initAtPoint:(NSPoint)aPoint
@@ -63,6 +71,7 @@ typedef struct
 - (BOOL)isActiveHandle;
 - (BOOL)symmetricalHandles;
 - (void)setSymmetricalHandles:(BOOL)flag;
+- (void)setPointPosition:(GRPointPosition)pPos;
 
 @end
 
